<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space">

        <TextView
            style="@style/Text.H2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_title" />

        <TextView
            android:id="@+id/phone"
            style="@style/Text.Soft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            tools:text="+7 900 111-22-33" />

        <TextView
            style="@style/Text.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:text="@string/profile_sub" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.AutoService.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:hint="@string/profile_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="150" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.AutoService.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:hint="@string/profile_car">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/car_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="120" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.AutoService.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_sm"
            android:hint="@string/profile_plate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/plate_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textCapCharacters"
                android:maxLength="16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            style="@style/Widget.AutoService.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:text="@string/profile_save" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_xl" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_out"
            style="@style/Widget.AutoService.Button.Danger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_sign_out" />

        <TextView
            android:id="@+id/version"
            style="@style/Text.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space"
            android:gravity="center"
            android:textColor="@color/text_faint"
            tools:text="Версия 1.0.0" />
    </LinearLayout>
</ScrollView>
